# Hyper-Liquid-Trading-Bot

./: .gitignore  Cargo.toml  README.md  config.toml  run.sh
src/: assets.rs  backtest.rs  bot.rs  consts.rs  executor.rs  helper.rs  lib.rs  margin.rs  market.rs  strategy.rs  trade_setup.rs  wallet.rs
src/frontend/: mod.rs  ws_structs.rs
src/frontend/interface/: index.html  package-lock.json  package.json  vite.config.ts
src/frontend/interface/src/: App.tsx  index.css  main.tsx  types.ts
src/frontend/interface/src/components/: AddMarket.tsx  AddMarketButton.tsx  Header.tsx  MarketCard.tsx  Markets.tsx  footer.tsx
src/signal/: mod.rs  signal.rs  types.rs
