[package]
name = "hyperliquid_rust_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperliquid_rust_sdk = { git = "https://github.com/0xNoSystem/hyperliquid-rust-sdk.git", branch = "master" }
kwant = { git = "https://github.com/0xNoSystem/Indicators_rs.git", branch = "main" }
chrono = "0.4.26"
env_logger = "0.10.0"
ethers = {version = "2.0.14", features = ["eip712", "abigen"]}
futures-util = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
lazy_static = "1.3"
log = "0.4.19"
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
rmp-serde = "1.0.0"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = {version = "0.20.0", features = ["native-tls"]}
uuid = {version = "1.6.1", features = ["v4"]}
dotenv = "0.15.0"
flume = "0.11.1"
toml = "0.8.20"
arraydeque = "0.5.1"
rustc-hash = "2.1.1"
futures = "0.3.31"
hyperliquid = "0.2.4"
anyhow = "1.0.98"
actix = "0.13"
actix-web = "4.11.0"
actix-web-actors = "4"
actix-cors = "0.6"



